--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,29 @@
 <%- include('partials/header'); -%>
 
-    <h1>Login</h1>
+    <%- include('partials/header'); -%>
 
-    <%- include('partials/footer'); -%>
+        <form>
+            <h2>Login</h2>
+            <label for="email">Email : </label>
+            <input type="text" name="email">
+            <div class="email error"></div>
+            <label for="password">Password : </label>
+            <input type="password" name="password">
+            <div class="password error"></div>
+            <button>Login</button>
+        </form>
+
+        <script>
+            const form = document.querySelector('form');
+            form.addEventListener('submit', (e) => {
+                e.preventDefault();
+                const email = form.email.value;
+                const password = form.password.value;
+                console.log(email, password);
+            });
+
+        </script>
+
+        <%- include('partials/footer'); -%>
+
+            <%- include('partials/footer'); -%>
